Changelog for Miosix np embedded OS

v1.58
- Reduced STACK_DEFAULT_FOR_PTHREAD to 2048 bytes, and STACK_MIN to 256 bytes.
- Added tests in testsuite for FastMutex, helped catch one bug
- Refactored code in Mutex and CondotionVariable
- Implement ConditionVariable support for FastMutex
- Breaking change: the Lock and Unlock classes have been templatized to
  work both with Mutex and FastMutex. Existing code Needs to be upgraded
  specifying the template parameter. For example, Lock l(m); becomes
  Lock<Mutex> l(m); or Lock<FastMutex> l(m);
- Added -D_REENT_SMALL flag to CFLAGS_BASE and CXXFLAGS_BASE, otherwise
  #including <reent.h> picks up the wrong version of struct _reent
- Thanks to the patched version of newlib, rewritten pthread mutex and
  condition variable code in a faster way.
- Added new compiler build scripts for gcc-4.5.2, with significantly more
  patching in the newlib area. This is required to implement pthread mutexes
  and condition variables efficiently, as well as to reduce memory footprint.
  As a drawback, the use of the new patched compiler has become mandatory to
  build Miosix.
- Bumped to version 1.58 because from now on the new compiler gcc-4.5.2, and
  especially the new newlib patches become necessary

v1.57
- Added memory barriers to miosix_private::doDisableInterrupts() and
  doEnableInterrupts(), and made fastDisableInterrupts() and
  fastEnableInterrupts() inline, for speed reasons.
- Fixed a bug in Mutex::tryLock(): it would return false in case it was called
  on a recursive mutex locked by the same thread
- Added testsuite tests for new functions/classes
- Added new fastDisableInterrupts(), fastEnableInterrupts() functions and
  FastInterruptDisableLock, FastInterruptEnableLock classes to disable
  interrupts in a fast but not recursive way. Optimized pause and restart
  kernel code, used these new features where appropriate throughout the kernel.
- Fixed a tricky bug in the AuxiliaryTimer implementation for the stm32 arch.